Bug 13738 - Soft-Lockup/Race in networking in 2.6.31-rc1+195
Summary: Soft-Lockup/Race in networking in 2.6.31-rc1+195
Status: CLOSED CODE_FIX
Alias: None
Product: Networking
Classification: Unclassified
Component: Other (show other bugs)
Hardware: All Linux
: P1 normal
Assignee: Arnaldo Carvalho de Melo
URL:
Keywords:
Depends on:
Blocks: 13615
  Show dependency tree
 
Reported: 2009-07-07 11:24 UTC by Rafael J. Wysocki
Modified: 2009-07-26 22:50 UTC (History)
0 users

See Also:
Kernel Version: 2.6.31-rc1
Tree: Mainline
Subsystem:
Regression: Yes


Attachments

Description Rafael J. Wysocki 2009-07-07 11:24:20 UTC
Subject    : Soft-Lockup/Race in networking in 2.6.31-rc1+195 (possibly caused by netem)
Submitter  : Andres Freund <andres@anarazel.de>
Date       : 2009-07-01 01:20
References : http://lkml.org/lkml/2009/6/30/398
Handled-By : Jarek Poplawski <jarkao2@gmail.com>
Notify-Also : Joao Correia <joaomiguelcorreia@gmail.com>

This entry is being used for tracking a regression from 2.6.30.  Please don't
close it until the problem is fixed in the mainline.
Comment 1 Rafael J. Wysocki 2009-07-26 22:50:03 UTC
On Friday 10 July 2009, Andres Freund wrote:
> Hi John, Hi Rafael,
> 
> On Friday 10 July 2009 03:46:57 John Dykstra wrote:
> > On Tue, 2009-07-07 at 03:25 +0200, Andres Freund wrote:
> > > There is also http://lkml.org/lkml/2009/6/30/398 : Soft-Lockup/Race
> > > in
> > > networking in 2.6.31-rc1+195 (possibly caused by netem)
> >
> > There is some similarity between this soft lockup and the one reported
> > in http://www.spinics.net/lists/netdev/msg100957.html.  In both, the
> > process is doing both sends and receives on raw sockets.
> The issue turned out to be a hrtimer bug - i dont see anything like it in
> your 
> trace. If you still want to test the fix, its 
> de907e8432b08f2d5966c36e0747e97c0e596810 in -tip (or 
> http://lkml.org/lkml/2009/7/9/150)
> 
> Rafael: In case youre reading this, I guess you can mark that bug as
> resolved.

Note You need to log in before you can comment on or make changes to this bug.